--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
         .attr("class", "line")
         .attr("d", valueline);
 
+      // Add the scatterplot
+      svg.selectAll("dot")
+        .data(data)
+        .enter().append("circle")
+        .filter(function(d) {
+          return d.total < 400
+        }) // <== This line
+        .style("fill", "red") // <== and this one
+        .attr("r", 4)
+        .attr("cx", function(d) {
+          return x(d.time);
+        })
+        .attr("cy", function(d) {
+          return y(d.total);
+        });
+
       // Add the X Axis
       svg.append("g")
         .attr("transform", "translate(0," + height + ")")
