--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     var margin = {
         top: 20,
         right: 20,
-        bottom: 30,
-        left: 50
+        bottom: 50,
+        left: 75
       },
       width = 960 - margin.left - margin.right,
       height = 500 - margin.top - margin.bottom;
@@ -135,7 +135,7 @@
         .attr("class", "line")
         .attr("d", valueline);
 
-      // // add the dots with tooltips
+      // add the dots with tooltips
       svg.selectAll("dot")
         .data(data)
         .enter().append("circle")
@@ -165,6 +165,24 @@
       // Add the Y Axis
       svg.append("g")
         .call(d3.axisLeft(y));
+
+      // Add the text label for the X axis
+      svg.append("text")
+        .attr("transform",
+          "translate(" + (width / 2) + " ," +
+          (height + margin.bottom) + ")")
+        .style("text-anchor", "middle")
+        .text("TIME");
+
+      // text label for the y axis
+      svg.append("text")
+        .attr("transform", "rotate(-90)")
+        .attr("y", 0 - margin.left)
+        .attr("x", 0 - (height / 2))
+        .attr("dy", "1em")
+        .style("text-anchor", "middle")
+        .text("TOTAL PEOPLE");
+
     });
   </script>
 
